# Xiaomi-Robotics-U0

./: .gitignore  README.md  pyproject.toml  requirements-ar.txt  requirements-depth.txt  requirements-vllm.txt
configs/: __init__.py  base.py  compose.py  profiles.py  runtimes.py
configs/tasks/: __init__.py  common.py  scene_gen.py  t2i.py  transfer.py  video_gen.py  x2i.py
demo/: flashar_api_server.py  flashar_gradio_app.py
examples/assets/: README.md
scripts/: inference.py  inference_ar.py  inference_flashar.py
tests/: test_depth_preprocess.py  test_flashar_demo_examples.py  test_flashar_t2i_prompts.py  test_hub_paths.py  test_task_configs.py  test_x2i_prompts.py
xr_u0_ar/: __init__.py  apply_vllm_patches.py  cli.py  configuration_unis.py  depth_preprocess.py  generation.py  hub_paths.py  image_tokens.py  logits_processor.py  modeling_unis.py  outputs.py  task_prompts.py  tokenization_unis.py  utils.py  video_outputs.py  vllm_generation.py
xr_u0_ar/tokenizer_unis_ibq/: README.md  tokenization_unis.py  tokenizer_config.json
xr_u0_ar/vision_tokenizer/: __init__.py
xr_u0_flashar/: __init__.py  apply_vllm_patches.py  batch_cli.py  cli.py  demo_examples.py  demo_runtime.py  eager_cli.py  model.py  outputs.py
xr_u0_flashar/vllm/: __init__.py  api.py  cfg.py  debug_dump.py  diagonal.py  driver.py  model.py  plugin.py  runtime.py  sampling.py  worker_hooks.py
